# Power

./: .gitignore  .plan.md  CHANGELOG.md  Cargo.toml  GAP_ANALYSIS.md  PLAN.md  README.md  justfile  phase7-plan.md  plan.md
.github/: setup-workspace.sh
.github/workflows/: ci.yml  release.yml
benches/: layer_stream.rs  tee_memory.rs
docs/: attestation-hardening-plan.md  hardware-verifier-operations.md  sae-interpretability-plan.md  supply-chain.md
examples/: box_integration.rs  dump_gguf.rs
src/: cli.rs  config.rs  dirs.rs  error.rs  lib.rs  main.rs  sae.rs
src/api/: autoload.rs  health.rs  mod.rs  prompt_policy.rs  receipt.rs  sse.rs  types.rs
src/api/native/: blobs.rs  chat.rs  copy.rs  create.rs  embed.rs  embeddings.rs  generate.rs  mod.rs  models.rs  ps.rs  pull.rs  push.rs  version.rs
src/api/openai/: attestation.rs  chat.rs  completions.rs  embeddings.rs  mod.rs  models.rs  usage.rs
src/backend/: chat_template.rs  gguf_stream.rs  gpu.rs  json_schema.rs  llamacpp.rs  mistralrs_backend.rs  mod.rs  picolm.rs  proxy.rs  test_utils.rs  think_parser.rs  tool_parser.rs  types.rs
src/backend/picolm_ops/: attention.rs  buffers.rs  dequant.rs  ffn.rs  grammar.rs  kv_cache.rs  matmul.rs  mod.rs  norm.rs  rope.rs  speculative.rs  tensor_cache.rs  tokenizer.rs  vec_dot.rs
src/cli/: delete.rs  list.rs  mod.rs  ps.rs  pull.rs  push.rs  run.rs  serve.rs  show.rs  stop.rs
src/model/: gguf.rs  known_models.json  manifest.rs  mod.rs  modelfile.rs  ollama_registry.rs  pull.rs  pull_state.rs  push.rs  registry.rs  resolve.rs  storage.rs
src/server/: audit.rs  auth.rs  limiter.rs  lock.rs  log_stream.rs  metrics.rs  mod.rs  request_context.rs  router.rs  state.rs  vsock.rs
src/tee/: attestation.rs  cert.rs  encrypted_model.rs  epc.rs  gpu.rs  key_provider.rs  mod.rs  model_seal.rs  policy.rs  privacy.rs
src/verify/: hw_verify.rs  mod.rs
tests/: epc_routing.rs  gguf_builder.rs  integration.rs  picolm_real.rs  picolm_spec_modes.rs  picolm_streaming.rs  picolm_tee.rs  proxy_backend.rs  soak.rs  streaming_decrypt.rs
