[package]
name = "a3s-power"
version = "0.2.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
repository = "https://github.com/A3S-Lab/Power"
description = "A3S Power — Privacy-preserving LLM inference for TEE environments"
readme = "README.md"
keywords = ["llm", "inference", "tee", "privacy", "gguf"]
categories = ["web-programming::http-server"]

[lib]
name = "a3s_power"
path = "src/lib.rs"

[[bin]]
name = "a3s-power"
path = "src/main.rs"

[[bin]]
name = "a3s-power-verify"
path = "src/bin/a3s-power-verify.rs"

[features]
default = ["mistralrs"]
llamacpp = ["dep:llama-cpp-2", "dep:encoding_rs"]
mistralrs = ["dep:mistralrs"]
tls = ["dep:axum-server", "dep:rcgen", "dep:time"]
# vsock = Linux-only; requires AF_VSOCK kernel support (a3s-box MicroVMs)
vsock = ["dep:tokio-vsock"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hcl-rs = "0.18"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async channels for streaming
tokio-util = { version = "0.7", features = ["io"] }

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Ed25519 signatures for model integrity verification
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }

# Hex encoding/decoding
hex = "0.4"

# Blocking HTTP client for a3s-power-verify CLI
ureq = "2"

# libc for mlock/munlock (in-memory model decryption)
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# SHA256 for model integrity
sha2 = "0.10"

# Memory zeroing for TEE privacy
zeroize = { version = "1", features = ["derive"] }

# Encrypted model loading (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"

# Chat template rendering (Jinja2-compatible)
minijinja = { version = "2", features = ["fuel"] }

# ioctl for TEE attestation (SEV-SNP /dev/sev-guest)
nix = { version = "0.29", features = ["ioctl"] }

# llama.cpp backend (optional, requires C++ toolchain)
llama-cpp-2 = { version = "0.1", optional = true }

# UTF-8 decoding for llama.cpp token_to_piece (re-exported by llama-cpp-2)
encoding_rs = { version = "0.8", optional = true }

# mistral.rs backend — pure Rust LLM inference (optional, default)
mistralrs = { version = "0.7", optional = true }

# TLS transport (optional, requires `tls` feature)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rcgen = { version = "0.13", optional = true }
time = { version = "0.3", optional = true }

# Vsock transport (optional, requires `vsock` feature; Linux only)
tokio-vsock = { version = "0.7", features = ["axum08"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
a3s-box-sdk = { path = "../box/src/sdk" }

[[example]]
name = "box_integration"
